--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textBottomRight"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:text="Hello World!"
@@ -18,6 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
+        android:id="@+id/textBottomLeft"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:text="Hello World!"
@@ -29,6 +31,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
+        android:id="@+id/textTopRight"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:text="Hello World!"
@@ -40,6 +43,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/textTopLeft"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:text="Hello World!"
@@ -50,4 +54,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_width="346dp"
+        android:layout_height="117dp"
+        android:max="150"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
